# vkr

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain
crates/shader/: Cargo.toml
crates/shader/gui/: Cargo.toml
crates/shader/gui/src/: lib.rs
crates/shader/main/: Cargo.toml
crates/shader/main/src/: lib.rs
crates/shader/present/: Cargo.toml
crates/shader/present/src/: lib.rs
crates/shader/src/: lib.rs
crates/vkr/: Cargo.toml  build.rs
crates/vkr-core/: Cargo.toml
crates/vkr-core/src/: buffer.rs  commands.rs  ctx.rs  debug.rs  descriptor.rs  descriptors.rs  dev.rs  frame.rs  framecache.rs  image.rs  lib.rs  mesh.rs  model.rs  pass.rs  pipeline.rs  pipelinecache.rs  primitive.rs  queue.rs  sampler.rs  shader.rs  surface.rs  swapchain.rs  sync.rs  texture.rs  util.rs  vertex.rs  win.rs
crates/vkr-core/src/math/: color.rs  line.rs  mat3.rs  mat4.rs  mod.rs  point3.rs  quat.rs  trs.rs  vec3.rs
crates/vkr-demo/: Cargo.toml  build.rs
crates/vkr-demo/src/: 1-texture.rs  2-parallax.rs  3-cube.rs  4-normal.rs  main.rs  pipe.rs
crates/vkr-pipe/: Cargo.toml
crates/vkr-pipe-test/: Cargo.toml  build.rs
crates/vkr-pipe-test/shader/simple/: Cargo.toml
crates/vkr-pipe-test/shader/simple/src/: simple.rs
crates/vkr-pipe-test/tests/: test.rs
crates/vkr-pipe/src/: attribute.rs  gen.rs  lib.rs  module.rs  shader.rs  spirv.rs  template.rs  util.rs
crates/vkr-pipe/tests/: pipelines.rs  test.rs
crates/vkr-pipe/tests/pipeline/: mod.rs  model.rs  simple.rs  test.rs
crates/vkr-pipe/tests/shader/: model.vert.glsl  simple.frag.glsl  simple.vert.glsl
crates/vkr-pipe/tests/shader/simple/: Cargo.toml
crates/vkr-pipe/tests/shader/simple/src/: simple.rs
crates/vkr-util/: Cargo.toml
crates/vkr-util/src/: lib.rs
crates/vkr/res/shader/: main.frag.glsl  main.vert.glsl  vert.glsl
crates/vkr/src/: descriptor.rs  frame.rs  gfx.rs  gui.rs  lib.rs  mesh.rs  model.rs  pipeline.rs  texture.rs
crates/vkr/src/pipeline/: default.rs  line.rs  main.rs  mod.rs  present.rs
res/shader/: Cargo.toml  frag.glsl  vert.glsl
res/shader/compute/: Cargo.toml
res/shader/compute/src/: lib.rs
res/shader/gui/: Cargo.toml
res/shader/gui/src/: lib.rs
res/shader/main/: Cargo.toml
res/shader/main/src/: lib.rs
res/shader/src/: lib.rs
script/: build-vkr.sh  compile-shaders.sh
src/: commands.rs  descriptor.rs  frame.rs  gfx.rs  gui.rs  image.rs  lib.rs  main.rs  mesh.rs  model.rs  pass.rs  pipeline.rs  primitive.rs  queue.rs  sampler.rs  shader.rs  sync.rs  util.rs
src/demo/: 1-texture.rs  2-parallax.rs  3-cube.rs  4-normal.rs  5-compute.rs  5-shadow.rs
