[package]
name = "vkr"
version = "0.1.0"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
edition = "2018"
license = "MIT"

[dependencies]
ash = "0.31.0"
sdl2 = "0.34.3"
byteorder = "1.4.3"
memoffset = "0.6.1"
vk-mem = { git = "https://github.com/gwihlidal/vk-mem-rs", version = "0.2.3" }
nalgebra = "0.25.3"

[build-dependencies]
spirv-builder = { path = "dep/rust-gpu/crates/spirv-builder" }
