[package]
name = "vkr"
version = "0.3.0"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
edition = "2018"
license = "MIT"

[[bin]]
name = "1-texture"
path = "src/demo/1-texture.rs"

[[bin]]
name = "2-parallax"
path = "src/demo/2-parallax.rs"

[[bin]]
name = "3-cube"
path = "src/demo/3-cube.rs"

[[bin]]
name = "4-normal"
path = "src/demo/4-normal.rs"

[dependencies]
ash = "0.31.0"
sdl2 = "0.34.3"
byteorder = "1.4.3"
memoffset = "0.6.1"
vk-mem = { git = "https://github.com/gwihlidal/vk-mem-rs", version = "0.2.3" }
nalgebra = "0.25.3"
png = "0.16.8"
imgui = "0.7.0"

[build-dependencies]
spirv-builder = { path = "dep/rust-gpu/crates/spirv-builder" }
