[package]
name = "vkr-core"
version = "0.4.1"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
edition = "2018"
license = "MIT"

[dependencies]
ash = "0.33"
sdl2 = { version = "0.34.3", optional = true }
memoffset = "0.6.1"
enum-ordinalize = "3.1.10"
byteorder = "1.4.3"
vk-mem = { git = "https://github.com/Fahien/vk-mem-rs", branch = "main" }
nalgebra = "0.25.3"
png = "0.16.8"
vkr-util = { path = "../vkr-util" }

[features]
default = ["win"]
win = ["sdl2"]
