[package]
name = "vkr-core"
version = "0.0.6"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
edition = "2018"
license = "MIT"

[dependencies]
ash = "0.37.1"
sdl2 = { version = "0.35.2", optional = true }
vk-mem = { git = "https://github.com/fahien/vk-mem-rs" }

[features]
default = ["win"]
win = ["sdl2"]
