[package]
name = "vkr-demo"
version = "0.4.1"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
edition = "2018"
license = "MIT"

[dependencies]
vkr = { path = "../vkr" }

[[bin]]
name = "1-texture"
path = "src/1-texture.rs"

[[bin]]
name = "2-parallax"
path = "src/2-parallax.rs"

[[bin]]
name = "3-cube"
path = "src/3-cube.rs"

[[bin]]
name = "4-normal"
path = "src/4-normal.rs"