[package]
name = "vkr-pipe-test"
version = "0.1.0"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
edition = "2018"
license = "MIT"

[dependencies]
vkr-pipe =  { path = "../vkr-pipe" }
ash = "0.33"
vkr-core = { path = "../vkr-core", default-features = false }
vkr-util = { path = "../vkr-util", default-features = false }

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu.git", tag = "v0.4.0-alpha.12" }
