[package]
name = "vkr-main-shaders"
version = "0.1.0"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["dylib"]

[dependencies]
spirv-std-macros = { path = "../../../dep/rust-gpu/crates/spirv-std-macros" }
spirv-std = { path = "../../../dep/rust-gpu/crates/spirv-std" }
