[package]
name = "simple-shader"
version = "0.1.0"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
edition = "2018"
license = "MIT"

# Empty workspace is needed here for correct building by excluding it from the outer workspace
[workspace]

[lib]
crate-type = ["lib", "dylib"]

# Do not use lib.rs for shaders to avoid confusion with pipewriter lib.rs
path = "src/simple.rs"

[dependencies]
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu.git", tag = "v0.4.0-alpha.12", features = ["glam"] }
